[gd_scene load_steps=2 format=3 uid="uid://animation_overlay_scene"]

[ext_resource type="Script" path="res://scripts/ui/animation_overlay.gd" id="1"]

[node name="AnimationOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="DarkBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 500)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/BackgroundPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/BackgroundPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HeaderContainer" type="HBoxContainer" parent="CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionNameLabel" type="Label" parent="CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Nombre de Acci√≥n"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
text = "X"

[node name="ParticipantsLabel" type="Label" parent="CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Participantes"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionImage" type="TextureRect" parent="CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="CenterContainer/BackgroundPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Presiona ESC o X para cerrar"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
